--- a/conf/base.config
+++ b/conf/base.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    ablab/hpcdockbench Nextflow base config file
+    nf-core/hpcdockbench Nextflow base config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     A 'blank slate' config file, appropriate for general use on most high performance
     compute environments. Assumes that all software is installed and available on
@@ -15,12 +15,16 @@ process {
     memory = { 6.GB   * task.attempt }
     time   = { 4.h    * task.attempt }
 
-    errorStrategy = { task.exitStatus in ((130..145) + 104 + 175) ? 'retry' : 'finish' }
+    errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'finish' }
     maxRetries    = 1
     maxErrors     = '-1'
 
+    // -- * Note this give a very big performance boost
+    stageInMode = 'symlink'
+    stageOutMode = 'rsync'
+
     // Process-specific resource requirements
-    // NOTE - Please try and reuse the labels below as much as possible.
+    // NOTE - Please try and re-use the labels below as much as possible.
     //        These labels are used and recognised by default in DSL2 files hosted on nf-core/modules.
     //        If possible, it would be nice to keep the same label naming convention when
     //        adding in your local modules too.
@@ -32,20 +36,35 @@ process {
         time   = { 4.h  * task.attempt }
     }
     withLabel:process_low {
-        cpus   = { 2     * task.attempt }
-        memory = { 12.GB * task.attempt }
+        cpus   = { 4     * task.attempt }
+        memory = { 8.GB * task.attempt }
         time   = { 4.h   * task.attempt }
     }
     withLabel:process_medium {
         cpus   = { 6     * task.attempt }
-        memory = { 36.GB * task.attempt }
+        memory = { 16.GB * task.attempt }
         time   = { 8.h   * task.attempt }
     }
-    withLabel:process_high {
-        cpus   = { 12    * task.attempt }
-        memory = { 72.GB * task.attempt }
+
+    withLabel:process_full {
+        cpus   = { 2   * task.attempt }
+        memory = { 2.GB * task.attempt }
         time   = { 16.h  * task.attempt }
     }
+
+    withLabel:process_high {
+        cpus   = { 12    * task.attempt }
+        memory = { 32.GB * task.attempt }
+        time   = { 16.h  * task.attempt }
+    }
+
+    withLabel:process_gpu {
+        cpus   = { 2   * task.attempt }
+        memory = { 16.GB * task.attempt }
+        time   = { 16.h  * task.attempt }
+    }
+
+
     withLabel:process_long {
         time   = { 20.h  * task.attempt }
     }
@@ -59,8 +78,53 @@ process {
         errorStrategy = 'retry'
         maxRetries    = 2
     }
-    withLabel: process_gpu {
-        ext.use_gpu = { workflow.profile.contains('gpu') }
-        accelerator = { workflow.profile.contains('gpu') ? 1 : null }
+
+    // -- * Custom profiles
+    withLabel:gpu_task {
+        maxForks = 1
+        errorStrategy = 'terminate'
+        memory = {8.GB * task.attempt}
+        cpus = 2
+        time = {10.min * task.attempt}
+
     }
+
+    withLabel:cpu_task {
+        errorStrategy = 'retry'
+        maxRetries    = 2
+        memory = {8.GB * task.attempt}
+        cpus = 8
+        time = {20.min * task.attempt}
+        maxRetries = { task.exitStatus >= 100 ? 4 : 1 }
+
+    }
+
+
+    withLabel:low_cpu{
+        errorStrategy = 'retry'
+        maxRetries    = 2
+        memory = {2.GB * task.attempt}
+        cpus = 2
+        time = {10.min * task.attempt}
+        maxRetries = { task.exitStatus >= 100 ? 4 : 1 }
+
+    }
+
+    withLabel:low_cpu_debug{
+        memory = {2.GB * task.attempt}
+        cpus = 2
+        time = {40.min * task.attempt}
+        // maxRetries = { task.exitStatus >= 100 ? 4 : 1 }
+
+    }
+
+
+    withLabel:very_low_cpu_debug{
+        memory = {1.GB * task.attempt}
+        cpus = 1
+        time = {40.min * task.attempt}
+        // maxRetries = { task.exitStatus >= 100 ? 4 : 1 }
+
+    }
+
 }
