--- a/nextflow.config
+++ b/nextflow.config
@@ -62,6 +62,7 @@ params {
     email                        = null
     email_on_fail                = null
     plaintext_email              = false
+    monochrome_log               = false
     monochrome_logs              = false
     hook_url                     = System.getenv('HOOK_URL')
     help                         = false
@@ -69,7 +70,7 @@ params {
     show_hidden                  = false
     version                      = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
- trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
+    trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 
     config_profile_name        = null
     config_profile_description = null
