--- a/Dockerfile.gpu_20_04
+++ b/Dockerfile.gpu_20_04
@@ -2,7 +2,7 @@
 FROM nvidia/cuda:12.6.3-runtime-ubuntu20.04
 
 LABEL authors="Hovakim Grabski" \
-        description="Docker image containing all software requirements for the nf-core/hpc_dock_bench pipeline GPU ICM-RIDGE"
+        description="Docker image containing all software requirements for the ablab/hpc_dock_bench pipeline GPU ICM-RIDGE"
 
 
 # Set up environment variables
