--- a/Dockerfile.gpu_22_04
+++ b/Dockerfile.gpu_22_04
@@ -2,7 +2,7 @@
 FROM nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04
 
 LABEL authors="Hovakim Grabski" \
-        description="Docker image containing all software requirements for the nf-core/hpc_dock_bench pipeline GPU ICM-RIDGE"
+        description="Docker image containing all software requirements for the ablab/hpc_dock_bench pipeline GPU ICM-RIDGE"
 
 
 # Set up environment variables
